--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,11 +2,10 @@ name: NyaaUtils
 main: cat.nyaa.nyaautils.NyaaUtils
 description: "Helper/utilities plugin for Nyaacat Minecraft Server"
 version: ${version}
-depend: [WorldEdit,Essentials,NyaaCore,LangUtils]
+depend: [WorldEdit,Essentials,NyaaCore]
 softdepend: [LockettePro,HamsterEcoHelper]
 authors: [RecursiveG,Cylin,Librazy]
 website: "https://github.com/NyaaCat/nyaautils"
-database: false
 api-version: 1.13
 commands:
   nyaautils:
