--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,44 +1,8 @@
 database:
-  lpstrategy:
-    provider: map
-    # provider: redis
-    connection:
-      key: java.util.UUID
-      value: cat.nyaa.nyaautils.lootprotect.LootProtectListener$VanillaStrategy
-      # redis
-      host: localhost
-      port: 6379
-      database: 1
-      password: password
-  lpbypass:
-    provider: map
-    connection:
-      key: java.util.UUID
-      value: java.util.UUID
-  fueldisabled:
-    provider: map
-    connection:
-      key: java.util.UUID
-      value: java.util.UUID
-  dpbypass:
-    provider: map
-    connection:
-      key: java.util.UUID
-      value: java.util.UUID
-  messagequeue:
-    provider: map
-    # provider: redis
-    connection:
-      key: java.util.UUID
-      value: java.lang.String
-      # redis
-      host: localhost
-      port: 6379
-      database: 0
-      password: password
   extrabackpack:
     provider: sqlite
-    connection:
-      autoscan: true
-      package: cat.nyaa.nyaautils.extrabackpack
-      file: Backpack.db
+    sqlite_file: Backpack.db
+    mysql_url:
+    mysql_username:
+    mysql_password:
+    mysql_jdbc_driver:
