replace command '/nu timer togglebroadcast <TimerName>' with two commands '/nu timer togglepointbroadcast <TimerName>' which controls whether to send a broadcast when a player reaches a normal checkpoint(from id=1 to id=timer.checkpointList.size()-2) and '/nu timer togglefinishbroadcast <TimerName>' which controls whether to send a broadcast when a player reaches the last checkpoint(id=timer.checkpointList.size()-1) to make the checkpoint boardcast more customizable. fix: java.lang.IndexOutOfBoundsException occurred while try to delete a checkpoint which id equals timer.checkpointList.size(). fix: build failure caused by character set settings under windows environment.

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "java-library"
 apply plugin: "maven-publish"
 
 // Plugin config
+compileJava.options.encoding = 'UTF-8'
 ext.pluginNameUpper = "NyaaUtils"
 ext.pluginNameLower = ext.pluginNameUpper.toLowerCase()
 ext.majorVersion = 7
@@ -9,6 +10,7 @@ ext.minorVersion = 2
 ext.minecraftVersion = "1.16.1"
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
 
 // Suppiled by Jenkins
 ext.buildNumber = System.env.BUILD_NUMBER == null ? "x"                : "$System.env.BUILD_NUMBER"
