--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ apply plugin: "maven-publish"
 compileJava.options.encoding = 'UTF-8'
 ext.pluginNameUpper = "NyaaUtils"
 ext.pluginNameLower = ext.pluginNameUpper.toLowerCase()
-ext.majorVersion = 7
-ext.minorVersion = 2
+ext.majorVersion = 8
+ext.minorVersion = 0
 ext.minecraftVersion = "1.16.1"
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -75,7 +75,7 @@ javadoc {
     if (project.jdDirectory != null) destinationDir = file("${jdDirectory}/${pluginNameLower}-${version}")
 
     options {
-        links 'https://docs.oracle.com/javase/8/docs/api/'
+        links 'https://docs.oracle.com/en/java/javase/14/docs/api/'
         links 'https://hub.spigotmc.org/javadocs/spigot/'
         links 'https://google.github.io/guava/releases/21.0/api/docs/'
         links 'https://ci.md-5.net/job/BungeeCord/ws/chat/target/apidocs/'
