--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ repositories {
     maven { name 'NyaaCat';     url 'https://ci.nyaacat.com/maven/' }
     maven { name 'NyaaCentral'; url 'https://raw.githubusercontent.com/NyaaCat/NyaaCentral/maven-repo'}
     maven { name 'EssentialsX'; url 'https://ci.ender.zone/plugin/repository/everything' }
+    maven { name 'aikar';       url 'https://repo.aikar.co/content/groups/aikar/' }
 }
 
 dependencies {
