func: permission check for command /nu exhibition inv func: merge command /nu exhibition inv and /nu exhibition inv to /nu exhibition toggleinv

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -50,7 +50,7 @@ permissions:
     description: Exhibition modification
     default: op
   nu.exhibition.uninv:
-    description: Exhibition modificatino
+    description: Exhibition modification
     default: op
   nu.exhibition.desc:
     description: Exhibition modification
